--- a/share.html
+++ b/share.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>ProfitPilot — Shared</title>
+  <title>ProfitPilot — Shared calculation</title>
+  <meta name="description" content="Open a shared ProfitPilot calculation and import it into the app.">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <style>
     :root{
       --bg:#f6f8fb; --bg2:#eef2ff; --txt:#0b1220; --muted:#5b6474;
-      --card:rgba(255,255,255,.88); --line:rgba(16,24,40,.10);
-      --accent:#0ea5a4; --shadow:0 10px 30px rgba(16,24,40,.08);
+      --card:rgba(255,255,255,.90); --line:rgba(16,24,40,.10);
+      --accent:#0ea5a4; --accent2:#4f46e5; --shadow:0 10px 30px rgba(16,24,40,.08);
+      --warn:#f59e0b; --bad:#ef4444; --ok:#0ea5a4;
     }
     *{box-sizing:border-box}
     body{
@@ -19,78 +21,398 @@
         radial-gradient(900px 500px at 80% 0%, rgba(79,70,229,.12), transparent 55%),
         linear-gradient(180deg, var(--bg2), var(--bg));
     }
-    .wrap{max-width:860px;margin:24px auto;padding:0 14px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:18px;padding:16px;box-shadow:var(--shadow)}
-    .pill{display:inline-flex;padding:8px 10px;border-radius:999px;border:1px solid var(--line);background:rgba(255,255,255,.72);font-size:12px;color:var(--muted)}
-    .btn{padding:10px 14px;border-radius:999px;border:1px solid var(--line);background:rgba(255,255,255,.78);color:var(--txt);text-decoration:none;display:inline-flex;gap:8px;align-items:center;cursor:pointer}
+    a{color:var(--accent);text-decoration:none}
+    .wrap{max-width:980px;margin:20px auto;padding:0 14px}
+    .nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
+    .brand{display:flex;gap:10px;align-items:center}
+    .logo{
+      width:40px;height:40px;border-radius:14px;
+      background:linear-gradient(135deg, rgba(14,165,164,.18), rgba(79,70,229,.14));
+      border:1px solid var(--line);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:900;
+    }
+    .pill{
+      padding:8px 10px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.72);font-size:12px;color:var(--muted);
+      display:inline-flex;gap:8px;align-items:center
+    }
+    .btn{
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.78);color:var(--txt);
+      display:inline-flex;gap:8px;align-items:center;cursor:pointer;
+      box-shadow:0 4px 16px rgba(16,24,40,.06);user-select:none;
+      white-space:nowrap;
+    }
     .btn.primary{border-color:rgba(14,165,164,.30);background:rgba(14,165,164,.10)}
+    .btn.ghost{background:transparent;box-shadow:none}
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:14px;margin-top:14px}
+    @media(max-width:900px){.grid{grid-template-columns:1fr}}
+    .card{
+      background:var(--card);border:1px solid var(--line);
+      border-radius:18px;padding:16px;box-shadow:var(--shadow);
+    }
+    .title{font-weight:900;margin:0 0 8px}
     .small{font-size:12px;color:var(--muted);line-height:1.6}
-    pre{white-space:pre-wrap;background:rgba(255,255,255,.70);border:1px solid var(--line);border-radius:14px;padding:12px;font-size:12px}
+    .kv{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
+    @media(max-width:560px){.kv{grid-template-columns:1fr}}
+    .k{border:1px solid var(--line);background:rgba(255,255,255,.72);border-radius:16px;padding:12px}
+    .k .h{font-size:12px;color:var(--muted)}
+    .k .v{font-size:18px;font-weight:900;margin-top:6px}
+    .divider{height:1px;background:var(--line);margin:12px 0}
+    input,textarea{
+      width:100%;padding:12px;border-radius:14px;border:1px solid var(--line);
+      background:rgba(255,255,255,.92);color:var(--txt);outline:none;
+    }
+    textarea{min-height:120px;resize:vertical}
+    .warn{color:var(--bad);font-weight:800}
+    footer{margin:14px 2px 0;color:var(--muted);font-size:12px;line-height:1.6}
+    code{background:rgba(255,255,255,.7);border:1px solid var(--line);padding:2px 6px;border-radius:10px}
   </style>
 </head>
 <body>
 <div class="wrap">
-  <div class="card">
-    <div style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;align-items:center">
+
+  <div class="nav">
+    <div class="brand">
+      <div class="logo">PP</div>
       <div>
-        <div style="font-weight:900;font-size:18px">ProfitPilot</div>
-        <div class="small">Shared calculation snapshot (read-only)</div>
+        <div style="font-weight:900">ProfitPilot</div>
+        <div class="pill">Shared calculation</div>
       </div>
-      <div class="pill" id="status">Loading…</div>
     </div>
-
-    <div style="margin-top:12px">
-      <a class="btn primary" href="app.html">Open app</a>
-      <a class="btn" href="index.html">Home</a>
-    </div>
-
-    <div style="margin-top:14px" class="small">
-      This page only displays what was shared. Edit values inside the app.
-    </div>
-
-    <div style="margin-top:12px">
-      <pre id="out">—</pre>
-    </div>
-
-    <div class="small">
-      Disclaimer: estimates only. Not financial/legal/tax advice.
+    <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
+      <a class="btn ghost" href="index.html">Home</a>
+      <a class="btn ghost" href="app.html">Open app</a>
+      <a class="btn ghost" href="reviews.html">Reviews</a>
     </div>
   </div>
+
+  <div class="grid">
+    <div class="card">
+      <div class="title">Summary</div>
+      <div class="small" id="status">Loading shared data…</div>
+
+      <div class="kv" id="kvBox" style="display:none">
+        <div class="k"><div class="h">Mode</div><div class="v" id="modeV">—</div></div>
+        <div class="k"><div class="h">Currency</div><div class="v" id="curV">—</div></div>
+        <div class="k"><div class="h">Selling price</div><div class="v" id="sellV">—</div></div>
+        <div class="k"><div class="h">Product cost</div><div class="v" id="costV">—</div></div>
+        <div class="k"><div class="h">Fees % / fixed</div><div class="v" id="feeV">—</div></div>
+        <div class="k"><div class="h">Ads % / return %</div><div class="v" id="adV">—</div></div>
+      </div>
+
+      <div class="divider"></div>
+
+      <div style="display:flex;gap:10px;flex-wrap:wrap">
+        <button class="btn primary" id="openInAppBtn">Open in app</button>
+        <button class="btn" id="copyBtn">Copy JSON</button>
+        <span class="pill" id="copyStatus">—</span>
+      </div>
+
+      <div class="small" style="margin-top:10px">
+        This shared link only contains calculator inputs (not your account info).
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="title">Shared data</div>
+      <div class="small">If you’re troubleshooting, you can view the raw payload below.</div>
+      <label>Payload (read-only)</label>
+      <textarea id="raw" readonly>—</textarea>
+
+      <div class="divider"></div>
+
+      <div class="small">
+        <b>Tip:</b> If this page shows an error, the link may be incomplete.
+        A valid link looks like: <code>share.html#s=...</code>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div><b>Independent tool:</b> Not affiliated with any marketplace/platform.</div>
+    <div><b>Estimates only:</b> Outputs depend on user inputs; no guarantees.</div>
+  </footer>
+
 </div>
 
 <script>
-  function decodeBase64Url(b64url){
-    try{
-      const b64 = b64url.replaceAll("-","+").replaceAll("_","/");
-      const pad = b64.length % 4 ? "=".repeat(4 - (b64.length % 4)) : "";
-      const bin = atob(b64 + pad);
-      const bytes = Uint8Array.from(bin, c => c.charCodeAt(0));
-      return new TextDecoder().decode(bytes);
-    }catch{ return null; }
+  function base64urlDecodeToString(b64url){
+    // convert url-safe -> standard
+    let s = (b64url||"").replace(/-/g, "+").replace(/_/g, "/");
+    // pad
+    while (s.length % 4) s += "=";
+    const bin = atob(s);
+    const bytes = new Uint8Array([...bin].map(ch => ch.charCodeAt(0)));
+    return new TextDecoder().decode(bytes);
   }
 
+  function safeNum(v){
+    const x = parseFloat(String(v).replace(/,/g,""));
+    return Number.isFinite(x) ? x : 0;
+  }
+
+  function setText(id, v){ document.getElementById(id).textContent = v; }
+
   const status = document.getElementById("status");
-  const out = document.getElementById("out");
+  const raw = document.getElementById("raw");
+  const kvBox = document.getElementById("kvBox");
+  const copyStatus = document.getElementById("copyStatus");
 
   const hash = location.hash || "";
-  const m = hash.match(/s=([^&]+)/);
+  const m = hash.match(/[#&]s=([^&]+)/);
   if (!m){
-    status.textContent = "No data";
-    out.textContent = "Missing share token.";
+    status.innerHTML = `<span class="warn">No shared payload found.</span> Please open a valid share link.`;
+    raw.value = "Missing #s token.";
   } else {
-    const json = decodeBase64Url(m[1]);
-    if (!json){
-      status.textContent = "Invalid token";
-      out.textContent = "Could not decode token.";
-    } else {
-      try{
-        const obj = JSON.parse(json);
-        status.textContent = "Loaded";
-        out.textContent = JSON.stringify(obj, null, 2);
-      }catch{
-        status.textContent = "Invalid data";
-        out.textContent = "Token data is not valid JSON.";
-      }
+    try{
+      const token = m[1];
+      const jsonStr = base64urlDecodeToString(token);
+      const data = JSON.parse(jsonStr);
+
+      raw.value = JSON.stringify(data, null, 2);
+      kvBox.style.display = "grid";
+
+      setText("modeV", data.mode || "profit");
+      setText("curV", data.currency || "GBP");
+
+      setText("sellV", (safeNum(data.sellPrice)).toFixed(2));
+      setText("costV", (safeNum(data.productCost)).toFixed(2));
+
+      setText("feeV", `${safeNum(data.feePct).toFixed(2)}% / ${safeNum(data.feeFixed).toFixed(2)}`);
+      setText("adV", `${safeNum(data.adsPct).toFixed(2)}% / ${safeNum(data.returnPct).toFixed(2)}%`);
+
+      status.textContent = "Ready. You can import this into the app.";
+
+      document.getElementById("openInAppBtn").onclick = ()=>{
+        // send payload to app via hash
+        const appUrl = `${location.origin}/app.html#import=${encodeURIComponent(token)}`;
+        location.href = appUrl;
+      };
+
+      document.getElementById("copyBtn").onclick = async ()=>{
+        try{
+          await navigator.clipboard.writeText(JSON.stringify(data));
+          copyStatus.textContent = "Copied.";
+        } catch(e){
+          copyStatus.textContent = "Copy failed (browser blocked).";
+        }
+      };
+
+    } catch(e){
+      status.innerHTML = `<span class="warn">Invalid or corrupted share payload.</span>`;
+      raw.value = "Decode error: " + (e?.message || String(e));
+    }
+  }
+</script>
+</body>
+</html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>ProfitPilot — Shared calculation</title>
+  <meta name="description" content="Open a shared ProfitPilot calculation and import it into the app.">
+  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
+  <style>
+    :root{
+      --bg:#f6f8fb; --bg2:#eef2ff; --txt:#0b1220; --muted:#5b6474;
+      --card:rgba(255,255,255,.90); --line:rgba(16,24,40,.10);
+      --accent:#0ea5a4; --accent2:#4f46e5; --shadow:0 10px 30px rgba(16,24,40,.08);
+      --warn:#f59e0b; --bad:#ef4444; --ok:#0ea5a4;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--txt);
+      background:
+        radial-gradient(900px 500px at 20% 0%, rgba(14,165,164,.16), transparent 55%),
+        radial-gradient(900px 500px at 80% 0%, rgba(79,70,229,.12), transparent 55%),
+        linear-gradient(180deg, var(--bg2), var(--bg));
+    }
+    a{color:var(--accent);text-decoration:none}
+    .wrap{max-width:980px;margin:20px auto;padding:0 14px}
+    .nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
+    .brand{display:flex;gap:10px;align-items:center}
+    .logo{
+      width:40px;height:40px;border-radius:14px;
+      background:linear-gradient(135deg, rgba(14,165,164,.18), rgba(79,70,229,.14));
+      border:1px solid var(--line);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:900;
+    }
+    .pill{
+      padding:8px 10px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.72);font-size:12px;color:var(--muted);
+      display:inline-flex;gap:8px;align-items:center
+    }
+    .btn{
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.78);color:var(--txt);
+      display:inline-flex;gap:8px;align-items:center;cursor:pointer;
+      box-shadow:0 4px 16px rgba(16,24,40,.06);user-select:none;
+      white-space:nowrap;
+    }
+    .btn.primary{border-color:rgba(14,165,164,.30);background:rgba(14,165,164,.10)}
+    .btn.ghost{background:transparent;box-shadow:none}
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:14px;margin-top:14px}
+    @media(max-width:900px){.grid{grid-template-columns:1fr}}
+    .card{
+      background:var(--card);border:1px solid var(--line);
+      border-radius:18px;padding:16px;box-shadow:var(--shadow);
+    }
+    .title{font-weight:900;margin:0 0 8px}
+    .small{font-size:12px;color:var(--muted);line-height:1.6}
+    .kv{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
+    @media(max-width:560px){.kv{grid-template-columns:1fr}}
+    .k{border:1px solid var(--line);background:rgba(255,255,255,.72);border-radius:16px;padding:12px}
+    .k .h{font-size:12px;color:var(--muted)}
+    .k .v{font-size:18px;font-weight:900;margin-top:6px}
+    .divider{height:1px;background:var(--line);margin:12px 0}
+    input,textarea{
+      width:100%;padding:12px;border-radius:14px;border:1px solid var(--line);
+      background:rgba(255,255,255,.92);color:var(--txt);outline:none;
+    }
+    textarea{min-height:120px;resize:vertical}
+    .warn{color:var(--bad);font-weight:800}
+    footer{margin:14px 2px 0;color:var(--muted);font-size:12px;line-height:1.6}
+    code{background:rgba(255,255,255,.7);border:1px solid var(--line);padding:2px 6px;border-radius:10px}
+  </style>
+</head>
+<body>
+<div class="wrap">
+
+  <div class="nav">
+    <div class="brand">
+      <div class="logo">PP</div>
+      <div>
+        <div style="font-weight:900">ProfitPilot</div>
+        <div class="pill">Shared calculation</div>
+      </div>
+    </div>
+    <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
+      <a class="btn ghost" href="index.html">Home</a>
+      <a class="btn ghost" href="app.html">Open app</a>
+      <a class="btn ghost" href="reviews.html">Reviews</a>
+    </div>
+  </div>
+
+  <div class="grid">
+    <div class="card">
+      <div class="title">Summary</div>
+      <div class="small" id="status">Loading shared data…</div>
+
+      <div class="kv" id="kvBox" style="display:none">
+        <div class="k"><div class="h">Mode</div><div class="v" id="modeV">—</div></div>
+        <div class="k"><div class="h">Currency</div><div class="v" id="curV">—</div></div>
+        <div class="k"><div class="h">Selling price</div><div class="v" id="sellV">—</div></div>
+        <div class="k"><div class="h">Product cost</div><div class="v" id="costV">—</div></div>
+        <div class="k"><div class="h">Fees % / fixed</div><div class="v" id="feeV">—</div></div>
+        <div class="k"><div class="h">Ads % / return %</div><div class="v" id="adV">—</div></div>
+      </div>
+
+      <div class="divider"></div>
+
+      <div style="display:flex;gap:10px;flex-wrap:wrap">
+        <button class="btn primary" id="openInAppBtn">Open in app</button>
+        <button class="btn" id="copyBtn">Copy JSON</button>
+        <span class="pill" id="copyStatus">—</span>
+      </div>
+
+      <div class="small" style="margin-top:10px">
+        This shared link only contains calculator inputs (not your account info).
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="title">Shared data</div>
+      <div class="small">If you’re troubleshooting, you can view the raw payload below.</div>
+      <label>Payload (read-only)</label>
+      <textarea id="raw" readonly>—</textarea>
+
+      <div class="divider"></div>
+
+      <div class="small">
+        <b>Tip:</b> If this page shows an error, the link may be incomplete.
+        A valid link looks like: <code>share.html#s=...</code>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div><b>Independent tool:</b> Not affiliated with any marketplace/platform.</div>
+    <div><b>Estimates only:</b> Outputs depend on user inputs; no guarantees.</div>
+  </footer>
+
+</div>
+
+<script>
+  function base64urlDecodeToString(b64url){
+    // convert url-safe -> standard
+    let s = (b64url||"").replace(/-/g, "+").replace(/_/g, "/");
+    // pad
+    while (s.length % 4) s += "=";
+    const bin = atob(s);
+    const bytes = new Uint8Array([...bin].map(ch => ch.charCodeAt(0)));
+    return new TextDecoder().decode(bytes);
+  }
+
+  function safeNum(v){
+    const x = parseFloat(String(v).replace(/,/g,""));
+    return Number.isFinite(x) ? x : 0;
+  }
+
+  function setText(id, v){ document.getElementById(id).textContent = v; }
+
+  const status = document.getElementById("status");
+  const raw = document.getElementById("raw");
+  const kvBox = document.getElementById("kvBox");
+  const copyStatus = document.getElementById("copyStatus");
+
+  const hash = location.hash || "";
+  const m = hash.match(/[#&]s=([^&]+)/);
+  if (!m){
+    status.innerHTML = `<span class="warn">No shared payload found.</span> Please open a valid share link.`;
+    raw.value = "Missing #s token.";
+  } else {
+    try{
+      const token = m[1];
+      const jsonStr = base64urlDecodeToString(token);
+      const data = JSON.parse(jsonStr);
+
+      raw.value = JSON.stringify(data, null, 2);
+      kvBox.style.display = "grid";
+
+      setText("modeV", data.mode || "profit");
+      setText("curV", data.currency || "GBP");
+
+      setText("sellV", (safeNum(data.sellPrice)).toFixed(2));
+      setText("costV", (safeNum(data.productCost)).toFixed(2));
+
+      setText("feeV", `${safeNum(data.feePct).toFixed(2)}% / ${safeNum(data.feeFixed).toFixed(2)}`);
+      setText("adV", `${safeNum(data.adsPct).toFixed(2)}% / ${safeNum(data.returnPct).toFixed(2)}%`);
+
+      status.textContent = "Ready. You can import this into the app.";
+
+      document.getElementById("openInAppBtn").onclick = ()=>{
+        // send payload to app via hash
+        const appUrl = `${location.origin}/app.html#import=${encodeURIComponent(token)}`;
+        location.href = appUrl;
+      };
+
+      document.getElementById("copyBtn").onclick = async ()=>{
+        try{
+          await navigator.clipboard.writeText(JSON.stringify(data));
+          copyStatus.textContent = "Copied.";
+        } catch(e){
+          copyStatus.textContent = "Copy failed (browser blocked).";
+        }
+      };
+
+    } catch(e){
+      status.innerHTML = `<span class="warn">Invalid or corrupted share payload.</span>`;
+      raw.value = "Decode error: " + (e?.message || String(e));
     }
   }
 </script>
